<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".ui.search.SearchFragment">

    <include
            android:id="@+id/search_frag_search_text_field"
            layout="@layout/edit_text_search"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_frag_stocks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/search_frag_search_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="LinearLayoutManager"
            android:scrollbars="vertical"
            tools:listitem="@layout/list_item_stock"
            android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_frag_search_history_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/search_frag_search_text_field"
            android:visibility="visible">

        <TextView
                android:id="@+id/search_frag_searched_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_ve_searched_for_this"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textFontWeight="700"
                android:textSize="22sp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_frag_history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item_search_history"
                app:layout_constraintTop_toBottomOf="@+id/search_frag_searched_text"
                android:layout_marginTop="10dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_frag_hold_to_delete"
                android:textSize="18sp"
                android:textFontWeight="600"
                android:textAlignment="center"
                android:alpha="0.6"
                app:layout_constraintTop_toBottomOf="@+id/search_frag_history_recycler_view"
                android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/search_frag_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true"/>

    <TextView
            android:id="@+id/search_frag_nothing_found_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/nothing_found"
            android:textSize="30sp"
            android:textFontWeight="900"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>